force-app/main/default/objects/Product2/fields/Is_Player_Goods__c.field-meta.xml
<CustomField>
    <fullName>Is_Player_Goods__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Player Goods</label>
    <type>Checkbox</type>
</CustomField>