force-app/main/default/objects/Product2/fields/Related_Player__c.field-meta.xml
<CustomField>
    <fullName>Related_Player__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>연관 선수(최애 선수 캠페인을 추천하기 위한 근거)</description>
    <inlineHelpText>연관 선수(최애 선수 캠페인을 추천하기 위한 근거)</inlineHelpText>
    <label>Related Player</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>