force-app/main/default/objects/Product2/fields/ZZ_Diag_Test__c.field-meta.xml
<CustomField>
    <fullName>ZZ_Diag_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ZZ Diag Test</label>
    <type>Checkbox</type>
</CustomField>