force-app/main/default/objects/Product2/recordTypes/Goods.recordType-meta.xml
<RecordType>
    <fullName>Goods</fullName>
    <active>true</active>
    <description>굿즈 제품 종류를 나타내기 위한 Record Type</description>
    <label>Goods</label>
</RecordType>