force-app/main/default/objects/Product2/recordTypes/Membership.recordType-meta.xml
<RecordType>
    <fullName>Membership</fullName>
    <active>true</active>
    <description>멤버십 제품 종류를 나타내기 위한 Record Type</description>
    <label>Membership</label>
</RecordType>