force-app/main/default/objects/Product2/recordTypes/Season_Pass.recordType-meta.xml
<RecordType>
    <fullName>Season_Pass</fullName>
    <active>true</active>
    <description>시즌 패스 제품 종류를 나타내기 위한 Record Type</description>
    <label>Season Pass</label>
</RecordType>