force-app/main/default/objects/Product2/recordTypes/Sponsorship_Package.recordType-meta.xml
<RecordType>
    <fullName>Sponsorship_Package</fullName>
    <active>true</active>
    <description>스폰서십 상품 패키지를 관리하기 위한 Product Record Type</description>
    <label>Sponsorship Package</label>
</RecordType>