force-app/main/default/objects/Product2/recordTypes/Ticket.recordType-meta.xml
<RecordType>
    <fullName>Ticket</fullName>
    <active>true</active>
    <description>티켓 값을 나타내기 위한 Record Type</description>
    <label>Ticket</label>
</RecordType>