force-app/main/default/objects/Product2/listViews/CloudAlpacas_Product.listView-meta.xml
<ListView>
    <fullName>CloudAlpacas_Product</fullName>
    <columns>PRODUCT2.RECORD_TYPE</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
        <operation>contains</operation>
        <value>TK-,SP-,MB-,GD-</value>
    </filters>
    <label>CloudAlpacas Product</label>
</ListView>